# milk

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/mkcl/: CMakeLists.txt  main.cc
doc/: CMakeLists.txt  Doxyfile.in
libs/: CMakeLists.txt
libs/cgen/: CMakeLists.txt
libs/cgen/apps/: CMakeLists.txt
libs/cgen/apps/cgen-cc/: CMakeLists.txt  cgen-compiler.cc  cgen-compiler.hh  main.cc
libs/cgen/cgen-libs/: CMakeLists.txt
libs/cgen/cgen-libs/cgen-std/: CMakeLists.txt  lib.c  lib.cg  lib.h
libs/cgen/include/cgen/ast/: all.hh  ast-def-fun.hh  ast-def-struct.hh  ast-def-type.hh  ast-def-var.hh  ast-def.hh  ast-expr-bin-op.hh  ast-expr-call.hh  ast-expr-cast.hh  ast-expr-field.hh  ast-expr-float.hh  ast-expr-id.hh  ast-expr-int.hh  ast-expr-sizeof.hh  ast-expr-string.hh  ast-expr-un-op.hh  ast-expr.hh  ast-instr-block.hh  ast-instr-break.hh  ast-instr-continue.hh  ast-instr-expr.hh  ast-instr-if.hh  ast-instr-return.hh  ast-instr-var.hh  ast-instr-while.hh  ast-instr.hh  ast-program.hh  ast-type-id-name.hh  ast-type-id-pointer.hh  ast-type-id.hh  ast-visitor.hh  ast.hh  fwd.hh
libs/cgen/include/cgen/ctranslator/: ctranslator.hh
libs/cgen/include/cgen/parser/: lexer.hh  parser.hh
libs/cgen/include/cgen/types/: fwd.hh  type-builder.hh  type-check.hh  type-context.hh  type-error.hh  type-fun.hh  type-infos.hh  type-numeric.hh  type-ptr.hh  type-ref.hh  type-struct.hh  type-visitor.hh  type.hh
libs/cgen/include/parser/: lexer.hh
libs/cgen/src/: CMakeLists.txt
libs/cgen/src/ast/: CMakeLists.txt  ast-visitor.cc
libs/cgen/src/ctranslator/: ctranslator.cc
libs/cgen/src/parser/: lexer.cc  parser.cc
libs/cgen/src/types/: CMakeLists.txt  type-builder.cc  type-check.cc  type-context-binop.cc  type-context-unop.cc  type-context.cc  type-error.cc  type-infos.cc  type-visitor.cc
libs/cgen/tests/: CMakeLists.txt
libs/cgen/tests/app/: cgents.py  test-compiler.py  test-lexer.cc  test-lexer.py
libs/cgen/tests/examples/: algo_linked_list.c  algo_linked_list.cg  algo_set.c  algo_set.cg  algo_vector.c  algo_vector.cg  err_lex_invalid_sym.cg  err_parse_missing_op.cg  err_type_no_ret.cg  err_type_no_static_cast.cg  err_type_ret_void.cg  error_bad_ret.cg  error_no_static_cast.cg  error_unknown_type.cg  fn1.cg  fundefs.cg  globaldefs.cg  instrif.cg  instrreturn.cg  instrvar.cg  instrwhile.cg  ops_and.cg  ops_assign.cg  ops_band.cg  ops_binary.cg  ops_bor.cg  ops_bxor.cg  ops_call.cg  ops_cmp.cg  ops_eq.cg  ops_field.cg  ops_math.cg  ops_neq.cg  ops_or.cg  ops_paren.cg  ops_unary.cg  structdefs.cg  typedefs.cg  types_ptr.cg
libs/milk/: CMakeLists.txt
libs/milk/docs/: _next.txt  auto-memory.txt  boolean.txt  casting.txt  concepts.txt  decorators.txt  dynamic_dispatch  enum.txt  expr.txt  function.txt  global.txt  grammar.txt  modules.txt  operators.txt  readme.txt  standard.txt  statement.txt  structs.txt  templates.txt  types.txt  union.txt  variables.txt  versionning.txt
libs/milk/examples/: binary_search.mk  bubble_sort.c  bubble_sort.mk  fact.mk  fibo.mk  insertion_sort.mk  mergesort.mk  print_int.mk  print_str.mk  quicksort.mk  selection_sort.c  selection_sort.mk  strcat.mk  strcmp.mk  strlen.mk
libs/milk/include/milk/ast/: all.hh  ast-def-alias.hh  ast-def-enum.hh  ast-def-fun.hh  ast-def-struct.hh  ast-def-var.hh  ast-def.hh  ast-expr-call-named.hh  ast-expr-call.hh  ast-expr-constructor.hh  ast-expr-field.hh  ast-expr-id.hh  ast-expr-number.hh  ast-expr-special.hh  ast-expr.hh  ast-named-storage.hh  ast-program.hh  ast-stmt-block.hh  ast-stmt-break.hh  ast-stmt-expr.hh  ast-stmt-if.hh  ast-stmt-return.hh  ast-stmt-var.hh  ast-stmt-while.hh  ast-stmt.hh  ast-type-label-name.hh  ast-type-label-ref.hh  ast-type-label.hh  ast-visitor.hh  ast.hh  fwd.hh
libs/milk/include/milk/compiler/: compiler.hh
libs/milk/include/milk/parser/: lexer.hh  parser.hh
libs/milk/include/milk/type/: fwd.hh  type-builder.hh  type-codes.hh  type-composite.hh  type-enum.hh  type-fun.hh  type-native.hh  type-ref.hh  type-simple.hh  type-struct.hh  type-val.hh  type-visitor.hh  type-void.hh  type.hh
libs/milk/src/: CMakeLists.txt
libs/milk/src/ast/: ast-visitor.cc
libs/milk/src/compiler/: compiler.cc
libs/milk/src/parser/: lexer.cc  parser.cc
libs/milk/src/type/: type-builder.cc  type-visitor.cc
libs/milk/tests/: CMakeLists.txt
libs/milk/tests/apps/: test-compiler.py
libs/milk/tests/samples/algos/: binary_search.mk  fact.mk  insertion_sort.c  mergesort.c  mergesort.mk  print_float.mk  print_str.mk  quicksort.mk  str_to_upper.c  str_to_upper.mk  strcat.mk  strcmp.mk  strlen.mk
libs/milk/tests/samples/basics/: collide2d.mk  fact.mk  struct_vec2f.cc  struct_vec2f.mk
libs/milk/tests/samples/grammar/: def_alias1.mk  def_alias2.mk  def_enum_1.mk  def_enum_2.mk  def_enum_3.mk  def_enum_4.mk  def_enum_5.mk  def_fun_arg1.mk  def_fun_arg3.mk  def_fun_const_arg.mk  def_fun_noarg.mk  def_fun_ret.mk  def_funs.mk  def_struct_attrs1.mk  def_struct_attrs2.mk  def_struct_meth1.mk  def_struct_meth2.mk  def_struct_meth3.mk  def_struct_meth_deafult.mk  err_parse_def_struct_attr1.mk  err_parse_def_struct_meth1.mk  err_parse_expr_missing_op.mk  err_parse_stm_else_no_if.mk  err_parse_unclosed_brack.mk  expr_add1.mk  expr_bnot1.mk  expr_bnot2.mk  expr_bool.mk  (+40 more)
libs/obcl/: CMakeLists.txt
libs/obcl/src/: CMakeLists.txt
libs/obcl/src/bincl/: compiler.cc
libs/obcl/src/lexer/: lexer-error.cc  lexer.cc  location.cc  position.cc  token.cc  trie.cc
libs/obcl/src/parser/: parser-error.cc  parser.cc
libs/obcl/src/utils/: arguments.cc  debug.cc  io.cc  ipc.cc  path.cc  str.cc
libs/obcl/tests/: CMakeLists.txt
libs/obcl/tests/bincl/: compiler-test.cc
libs/obcl/tests/lexer/: lexer-test.cc  location-test.cc  stream-test.cc  token-test.cc
libs/obcl/tests/utils/: arguments-test.cc  format-string-test.cc  ipc-test.cc  path-test.cc  str-test.cc
src/: main.cc
src/lexer/: fwd.hh  lexer-error.cc  location.cc  location.hh  position.cc  stream.hh  token.cc  token.hh
tests/: CMakeLists.txt
tests/pyobts/: basicts.py  cmdrunner.py  testfinder.py  testsuite.py  ucmd.py
(+18 files in other folders)
